--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cidr-tools": "^11.0.3",
     "express": "^5.1.0",
     "litegraph.js": "^0.7.18",
+    "node-nmap": "^4.0.0",
     "vite": "^6.3.5",
     "vite-express": "^0.21.1"
   },
