--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "vulnerability",
     "scanning"
   ],
+  "bin": "server.js",
   "homepage": "https://github.com/Milk-Cool/overflow#readme",
   "bugs": {
     "url": "https://github.com/Milk-Cool/overflow/issues"
