--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "overflow",
+  "name": "overflow-scanner",
   "version": "0.1.0",
   "description": "Vulnerability scanning using graphs!",
   "keywords": [
