--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vite-express": "^0.21.1"
   },
   "devDependencies": {
-    "@types/express": "^5.0.3"
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.0.3"
   }
 }
